--- a/index.html
+++ b/index.html
@@ -194,10 +194,30 @@
 						A backend compiler that the intermediate representation and compiles to WebAssembly.
 					</p>
 					<p>
-						The WebAssembly is subsequently passed to a browser engine, either being loaded over HTTP or read from the filesystem, say, in Node.js.
+						The WebAssembly is subsequently passed to a browser engine, either being loaded over HTTP in a browser or read from the filesystem in Node.js.
 					</p>
 					<p>
 						The browser engine then translates the WebAssembly to machine code specific to a host platform.
+					</p>
+				</aside>
+			</section>
+
+			<section class="center">
+				<h2 class="no-text-transform">Assembly</h2>
+
+				<aside class="notes">
+					<p>
+						So similar to how assembly is a low-level programming language which is specific to a particular computer architecture and has a strong correspondence between the language and an architecture's machine code instructions...
+					</p>
+				</aside>
+			</section>
+
+			<section class="center">
+				<p>WebAssembly is assembly for the web</p>
+
+				<aside class="notes">
+					<p>
+						...WebAssembly is assembly for the web.
 					</p>
 				</aside>
 			</section>
