--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 				<aside class="notes">
 					<p>
-						Many modern compilers, such as LLVM and GCC, are now split into two components: a frontend compiler, responsible for taking a higher level language like C or C++ and compiling to an intermediate representation (IR), which is a low-level language similar to assembly, and a backend compiler, responsible for translating the intermediate representation to instruction sets (i.e., machine code).
+						Many modern compilers, such as LLVM and GCC, are now split into two components: a frontend compiler, responsible for taking a higher level language like C or C++ and compiling to an optimized intermediate representation (IR), which is a low-level language similar to assembly, and a backend compiler, responsible for translating the intermediate representation to instruction sets (i.e., machine code).
 					</p>
 					<p>
 						By doing this, no longer is the translation problem N by M (or multiplicative), but additive, N plus M.
@@ -477,7 +477,50 @@
 				</div>
 
 				<aside class="notes">
-
+					<p>
+						WebAssembly has several purported advantages...
+					</p>
+					<ul>
+						<li>
+							First, the binary format is compact, which means fewer bytes must be sent over the wire and faster load times.
+						</li>
+						<li>
+							Next, because the binary format is structured, having a defined layout, module loaders need to perform only a single-pass in order to parse an encoded module into an AST in preparation for translating to machine code. The advantage of only requiring a single-pass is that modules are able to be instantiated faster compared to a module written in vanilla JavaScript.
+						</li>
+						<li>
+							Third, WebAssembly is strongly typed, which means more efficient serialization and, again, fewer bytes sent over the wire.
+						</li>
+						<li>
+							<p>
+								Next, because WebAssembly is strongly typed, frontend compilers are able to perform ahead-of-time optimizations. This stands in contrast to JavaScript for instance which first must be compiled and monitored to determine if particular functions are running "hot".
+							</p>
+							<p>
+								Once a function is "hot", the function gets sent to an optimizing compiler which makes optimistic assumptions about input value types and code paths, essentially creating an optimized version of the "hot" function.
+							</p>
+							<p>
+								If a function receives an unexpected input value type, the optimized function gets deoptimized and the cycle repeats indefinitely or until a function gets put in "deoptimization hell".
+							</p>
+							<p>
+								So instead of runtime optimization, with WebAssembly, we can do much of the optimizations an optimizing compiler does before every running in a JavaScript runtime.
+							</p>
+						</li>
+						<li>
+							Next, because WebAssembly is strongly typed, we are able to avoid deoptimizing cycles as the optimization/deoptimization loop is no longer needed: input and output value types are defined ahead-of-time and not something a runtime compiler must empirically discover.
+						</li>
+						<li>
+							Another advantage is that WebAssembly is lower-level, which means that WebAssembly is easier to translate to efficient and optimized machine instructions, which means faster execution.
+						</li>
+						<li>
+							<p>
+								Next, WebAssembly does not come with a garbage collector, which means that WebAssembly modules are responsible for manually managing memory. This is useful as this allows control over when memory is allocated and deallocated, as you might want to during "deadtime", i.e., when an application is running idle.
+							</p>
+							<p>
+								On the flip side, the lack of GC also means that languages which depend on a GC cannot be easily compiled to WebAssembly (e.g., Python, et al).
+							</p>
+						</li>
+						<li>
+							If we combine all the aforementioned advantages, WebAssembly promises, for certain applications, better performance compared to JavaScript.
+						</li>
 				</aside>
 			</section>
 
