--- a/index.html
+++ b/index.html
@@ -1942,7 +1942,7 @@ for ( i = 0; i &lt; 10; i++ ) {
 				</table>
 				<aside class="notes">
 					<p>
-						Benchmarks!
+						Benchmarks! Note that native is hardware optimized BLAS.
 					</p>
 				</aside>
 			</section>
