--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 								For much of their life on the web, applets were significantly faster than JavaScript and were especially useful for compute intensive applications.
 							</p>
 							<p>
-								However, as JavaScript engines have improved and gained support for hardware-accelerated graphics, the speed difference has dismissed significantly.
+								However, as JavaScript engines have improved and gained support for hardware-accelerated graphics, the speed difference has diminished significantly.
 							</p>
 							<p>
 								Accordingly, Java applets have less of a role on the web and have now been deprecated.
