Add missing word

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 								The last bit of prior art is asm.js, which started off as a research project at Mozilla.
 							</p>
 							<p>
-								The goal was determine whether JavaScript could be reduced to a language subset, capable of ahead-of-time optimizations and other performance improvements similar to that of statically compiled languages.
+								The goal was to determine whether JavaScript could be reduced to a language subset, capable of ahead-of-time optimizations and other performance improvements similar to that of statically compiled languages.
 							</p>
 							<p>
 								The team working on asm.js was able to demonstrate a runtime performance just 1.5-2x slower than C. Meaning, using JavaScript alone, they were able to achieve near-native performance.
