--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 								The goal was to determine whether JavaScript could be reduced to a language subset, capable of ahead-of-time optimizations and other performance improvements similar to that of statically compiled languages.
 							</p>
 							<p>
-								The team working on asm.js was able to demonstrate a runtime performance just 1.5-2x slower than C. Meaning, using JavaScript alone, they were able to achieve near-native performance.
+								The team working on asm.js was able to demonstrate a runtime performance just 1.5-2x of C. Meaning, using JavaScript alone, they were able to achieve near-native performance.
 							</p>
 							<p>
 								One of the big advantages of asm.js compared to prior efforts is that, because asm.js is still JavaScript, code compiled to asm.js is backward compatible with older browsers.
