--- a/index.html
+++ b/index.html
@@ -201,6 +201,9 @@
 					<p>
 						And it allows running languages other than JavaScript within browser environments.
 					</p>
+					<p>
+						More specifically, the current focus is the ability to run statically compiled languages, such as C, C++, and Rust, within browser environments.
+					</p>
 				</aside>
 			</section>
 
