--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 						To support compiling an additional higher level language, I only need to write a single frontend compiler, responsible for compiling that higher level language to an intermediate representation.
 					</p>
 					<p>
-						Once the language is compiled to an intermediate representation, it can automatically be translated to machine code using a backend compiler.
+						Once the language is compiled to an intermediate representation, it can automatically be translated to machine code using an existing backend compiler.
 					</p>
 					<p>
 						This is in contrast to the earlier "simple" compiler I mentioned previously where I would have needed to write M translations for every language I want to add.
