--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 						Once the language is compiled to an intermediate representation, it can automatically be translated to machine code using an existing backend compiler.
 					</p>
 					<p>
-						This is in contrast to the earlier "simple" compiler I mentioned previously where I would have needed to write M translations for every language I want to add.
+						This is in contrast to the "simple" compiler I mentioned previously where I would have needed to write M translations for every language I want to add.
 					</p>
 					<p>
 						In a similar vein, if I want to add an additional instruction set, I only need to figure out how to translate the intermediate representation to machine code specific to that processor.
