--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 						A backend compiler takes the intermediate representation and compiles to WebAssembly.
 					</p>
 					<p>
-						The WebAssembly is subsequently passed to a JavaScript engine, either being loaded over HTTP in a browser or read from the filesystem in Node.js.
+						The WebAssembly is subsequently passed to a JavaScript engine, either loaded over HTTP in a browser or read from the filesystem in Node.js.
 					</p>
 					<p>
 						The JavaScript engine then translates the WebAssembly to machine code specific to a host platform.
