--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 						The type section contains function definitions that are used in the module.
 					</p>
 					<p>
-						The export section names the functions which should be exported from the module.
+						The export section names the definitions which should be exported from the module.
 					</p>
 					<p>
 						The code section begins with a function declaration, the declaration of our function "add".
