--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
 				<aside class="notes">
 					<p>
-						...here is same WebAssembly we saw in text format represented in binary format.
+						...here is same WebAssembly module we saw in text format represented in binary format.
 					</p>
 					<p>
 						If we convert the Hex to a string (right side), we can see that the module is comprised of 6 sections.
