--- a/index.html
+++ b/index.html
@@ -611,7 +611,12 @@
 				</div>
 
 				<aside class="notes">
-					The current WebAssembly specification defines many operators and functions for data type conversion, truncation, reinterpretation, promotion, and demotion. Here, I am listing operators for working with 32-bit integers. For the complete list of operators, see the specification.
+					<p>
+						The current WebAssembly specification defines many operators and functions for data type conversion, truncation, reinterpretation, promotion, and demotion.
+					</p>
+					<p>
+						Here, I am listing operators for working with 32-bit integers. For the complete list of operators, see the specification.
+					</p>
 				</aside>
 			</section>
 
