--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
 								If a function receives an unexpected input value type, the optimized function gets deoptimized and the cycle repeats indefinitely or until a function gets put in "deoptimization hell".
 							</p>
 							<p>
-								So instead of runtime optimization, with WebAssembly, we can do much of the optimizations an optimizing compiler does before ever running in a JavaScript runtime.
+								So instead of runtime optimization, with WebAssembly, we can do much of the optimization an optimizing compiler does before ever running in a JavaScript runtime.
 							</p>
 						</li>
 						<li>
